Completed Project.  Not happy with the responsiveness of my website.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="col-md-offset-4 col-md-4">
           <ul class="accordion">
             <li>
-              <h1 class="my-heading"><i class="fa fa-inbox"></i>My Files<span class="number1">495</span></h1>
-              <ul class="sub-folders">
+              <h1 class="my-heading"><i class="fa fa-inbox"></i>My Files<span class="circle number1">495</span></h1>
+              <ul class="sub-folders active">
                 <li>Dropbox</li>
                 <li>Skydrive</li>
                 <li>FTP Server</li>
@@ -24,7 +24,7 @@
               </ul>
             </li>
             <li>
-              <h1 class="my-heading"><i class="fa fa-envelope"></i>Mail<span class="number2">26</span></h1>
+              <h1 class="my-heading"><i class="fa fa-envelope"></i>Mail<span class="circle number2">26</span></h1>
               <ul class="sub-folders">
                 <li>Inbox</li>
                 <li>Sent</li>
@@ -34,7 +34,7 @@
               </ul>
             </li>
             <li>
-              <h1 class="my-heading"><i class="fa fa-cloud-upload"></i>Cloud<span class="number3">58</span></h1>
+              <h1 class="my-heading"><i class="fa fa-cloud-upload"></i>Cloud<span class="circle number3">58</span></h1>
               <ul class="sub-folders">
                 <li>Connect</li>
                 <li>Profiles</li>
@@ -53,6 +53,6 @@
       </div>
     </div>
 
-    <script src="scripts/main.js"></script>
+    <script src="app/scripts/main.js"></script>
   </body>
 </html>
